tests/struct/bad/struct_update.catala_en
```catala
declaration structure Str:
  data fld1 content integer
  data fld2 content money
  data fld3 content date

declaration scope S:
  internal s0 content Str
  output s1 content Str

scope S:
  definition s0 equals Str {
    -- fld1: 0
    -- fld2: $1
    -- fld3: |2003-01-01|
  }
  definition s1 equals s0 but replace { --fld1: 0 -- flx1: 99 }
```


```catala-test-inline
$ catala test-scope S
[ERROR] Field flx1 does not belong to structure Str

┌─⯈ tests/struct/bad/struct_update.catala_en:17.60-17.62:
└──┐
17 │   definition s1 equals s0 but replace { --fld1: 0 -- flx1: 99 }
   │                                                            ‾‾

Declaration of structure Str
┌─⯈ tests/struct/bad/struct_update.catala_en:2.23-2.26:
└─┐
2 │ declaration structure Str:
  │                       ‾‾‾
#return code 123#
```
